# src/swagger_output.json
@@ -9,8 +9,16 @@
   "basePath": "/",
   "tags": [
     {
-      "name": "User",
-      "description": "Endpoints"
+      "name": "Auth",
+      "description": "Endpoints de autenticacion"
+    },
+    {
+      "name": "Message",
+      "description": "Endpoints de administracion de los mensajes del foro"
+    },
+    {
+      "name": "Pokemon",
+      "description": "Endpoints sobre interaccion con los pokemon"
     }
   ],
   "schemes": [
@@ -19,18 +27,9 @@
   ],
   "securityDefinitions": {
     "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
+      "type": "Bearer",
+      "name": "Authorization",
       "in": "header"
-    },
-    "petstore_auth": {
-      "type": "oauth2",
-      "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
-      "flow": "implicit",
-      "scopes": {
-        "read_pets": "read your pets",
-        "write_pets": "modify pets in your account"
-      }
     }
   },
   "consumes": [
@@ -42,11 +41,83 @@
   "paths": {
     "/": {
       "get": {
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint para enviar todos los mensajes del foro",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "OK"
+            "schema": {
+              "type": "object",
+              "properties": {
+                "messages": {
+                  "type": "string",
+                  "example": "array"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Lista de mensajes del foro"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint para agregar un nuevo mensaje al foro",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "content": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Mensaje nuevo"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -54,9 +125,9 @@
     "/register": {
       "post": {
         "tags": [
-          "User"
+          "Auth"
         ],
-        "description": "",
+        "description": "Endpoint para registrar un nuevo usuario",
         "parameters": [
           {
             "name": "body",
@@ -77,7 +148,26 @@
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "201": {
+            "description": "Mesanje de exito",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     },
     "/login": {
@@ -85,6 +175,236 @@
         "description": "",
         "parameters": [],
         "responses": {}
+      }
+    },
+    "/token": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "Endpoint para registrar un nuevo usuario",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "jwt": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Token de acceso"
+          }
+        }
+      }
+    },
+    "/{id}": {
+      "put": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint para actualizar un mensaje del foro",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                },
+                "content": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Mensaje actualizado"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Endpoint para actualizar un mensaje del foro",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Mensaje eliminado"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/download": {
+      "post": {
+        "tags": [
+          "Pokemon"
+        ],
+        "description": "Endpoint para descargar en pdf un pokemon",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "image": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "pdf": {
+                  "type": "string",
+                  "example": "file"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "PDF de un pokemon en especifico"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/qr": {
+      "post": {
+        "tags": [
+          "Pokemon"
+        ],
+        "description": "Endpoint para generar qr de pokemon",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "201": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "qr": {
+                  "type": "string",
+                  "example": "string"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "String de qr para ver un pokemon"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
       }
     }
   },
@@ -99,6 +419,23 @@
         "password": {
           "type": "string",
           "example": "djnsifnsanli"
+        },
+        "role": {
+          "type": "string",
+          "example": "member"
+        }
+      }
+    },
+    "Token": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string",
+          "example": "1234"
+        },
+        "token": {
+          "type": "string",
+          "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2NzA4MDc5MTMsImV4cCI6MTY3MzM5OTkxM30.pr6RclyYIIXo55m3myAuE_Mi_fdQVuDJj3VntZhOxxg"
         }
       }
     }
