# src/view/api/authentication.js
@@ -1,9 +1,11 @@
-const userController = require('../../controller/authController')
+const authController = require('../../controller/authController')
 
 
 module.exports = (router, app) => {
-    router.post("/register", userController.registerUser);
-    router.post("/login", app.oauth.grant(), userController.authUser);
+    router.post("/register", authController.registerUser);
+    router.post("/login", app.oauth.grant(), authController.authUser);
+    // router.post("/token", app.oauth.authorize(), authController.authUser);
+    router.get("/token", authController.getAccessToken);
 
     return router;
 };
